@@ -1,21 +1,27 @@
 package com.pragma.foodcourt.infrastructure.out.jpa.adapter;
 
 import com.pragma.foodcourt.domain.model.Order;
+import com.pragma.foodcourt.domain.model.OrderStatusEnum;
 import com.pragma.foodcourt.domain.spi.IOrderPersistencePort;
 import com.pragma.foodcourt.infrastructure.out.jpa.entity.OrderEntity;
 import com.pragma.foodcourt.infrastructure.out.jpa.repository.OrderRepository;
+import com.pragma.foodcourt.infrastructure.out.jpa.specification.IOrderSpecification;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class OrderJpaAdapter implements IOrderPersistencePort {
 
     private final OrderRepository orderRepository;
+    private final IOrderSpecification orderSpecification;
     private final ModelMapper modelMapper;
 
     @Override
@@ -30,6 +36,19 @@ public class OrderJpaAdapter implements IOrderPersistencePort {
     public List<Order> findAllByCustomerId(Long customerId) {
         return orderRepository.findAllByCustomerId(customerId).stream()
                 .map(orderEntity -> modelMapper.map(orderEntity, Order.class))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public List<Order> findAll(int page, int pageSize, OrderStatusEnum status, Long restaurantId) {
+        Specification<OrderEntity> specification = Specification.where(orderSpecification.hasStatus(status))
+                .and(orderSpecification.hasRestaurantId(restaurantId));
+
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<OrderEntity> orderEntities = orderRepository.findAll(specification, pageable);
+
+        return orderEntities
+                .map(orderEntity -> modelMapper.map(orderEntity, Order.class))
+                .toList();
     }
 }
